:wrench: chore: update variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 DATABASE_URL=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+NODE_ENV=
+
 PORT=
 
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+
